2023-07-28T16:19:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5694078852 # 1031
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
* notice: last 14d: unq all: 5 37
* notice: prev accum: outdated-unq outdated-all / unq all: 559 893 / 581 928
* notice: next accum: outdated-unq outdated-all / unq all: 559 893 / 582 931
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +4 +7 -0 -0 / 4 7
* notice: removed / changed dates: [] / [2023-07-28]

2023-07-28T08:18:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5689802810 # 1030
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
* notice: last 14d: unq all: 4 34
* notice: prev accum: outdated-unq outdated-all / unq all: 559 893 / 578 924
* notice: next accum: outdated-unq outdated-all / unq all: 559 893 / 581 928
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -1 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2023-07-14 2023-07-28]

2023-07-27T16:19:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5682995312 # 1028
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-27
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 557 890 / 578 923
* notice: next accum: outdated-unq outdated-all / unq all: 559 893 / 578 924
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-13] / [2023-07-27]

2023-07-27T08:18:36Z: