@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-28T16:19:23Z",
-  "count_outdated" : 893,
-  "uniques_outdated" : 559,
-  "count" : 931,
+  "timestamp" : "2023-07-29T01:14:57Z",
+  "count_outdated" : 895,
+  "uniques_outdated" : 560,
+  "count" : 932,
   "uniques" : 582,
   "clones" : [
-    {
-      "timestamp": "2023-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-15T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 4, 7 ],
-      "count_decinc": [ 0, 7 ],
+      "count": 8,
+      "count_minmax": [ 4, 8 ],
+      "count_decinc": [ 0, 8 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ],
       "uniques_decinc": [ 0, 4 ]
