@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-07-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-07-15T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 7,
+      "count": 8,
       "uniques": 4
     }
   ]
