@@ -1,3 +1,12 @@
+2023-07-29T01:14:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5697694210 # 1032
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-29
+* notice: last 14d: unq all: 5 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 559 893 / 582 931
+* notice: next accum: outdated-unq outdated-all / unq all: 560 895 / 582 932
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +4 +8 -0 -0 / 4 8
+* notice: removed / changed dates: [2023-07-14] / [2023-07-28]
+
 2023-07-28T16:19:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5694078852 # 1031
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-28
